added header and logo

--- a/index.html
+++ b/index.html
@@ -2,8 +2,27 @@
 <html>
 <head>
 	<title>Brandi</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<p>cute website</p>
+
+	<div class="container">
+
+		<header class="header">
+			<img src="images/header.png">
+			<div class="wrapper">
+				<div id="logo">
+					<img id="logo" src="images/brandi_logo.png">
+				</div>
+			</div>
+		</header>
+
+		<div class="header-slider">
+			<img id="" src="images/header_slider.jpg">
+		</div>
+
+		<footer class="footer"></footer>
+	</div>
+
 </body>
 </html>
