finished navigation bar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Brandi</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="scripts/jquery-1.12.3.js"></script>
 </head>
 <body>
 
@@ -11,9 +12,18 @@
 		<header class="header">
 			<img src="images/header.png">
 			<div class="wrapper">
-				<div id="logo">
+				<span id="logo">
 					<img id="logo" src="images/brandi_logo.png">
-				</div>
+				</span>
+				<span id="separator-logo"></span>
+				<span><p id="tag-line">I am your tag line</p></span>
+				<ul class="navigation">
+					<li class="current"><a href="#">Home</a></li>
+					<li><a href="#">Features</a></li>
+					<li><a href="#">Works</a></li>
+					<li><a href="#">Team</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
 			</div>
 		</header>
 
@@ -23,6 +33,7 @@
 
 		<footer class="footer"></footer>
 	</div>
-
+	<script type="text/javascript" src="scripts/main.js"></script>
+	
 </body>
 </html>
