added more content

--- a/index.html
+++ b/index.html
@@ -25,15 +25,73 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
+			<div class="header-content">
+				<h2>Meet <span>Brandi</span>!</h2>
+				<h3><span>/creative</span> one page template.</h3>
+				<p><span class="header-content-line"></span>We are a team of professionals <span class="header-content-line"></span></p>
+				<div id="header-social">
+					<img src="images/social.png">
+				</div>
+			</div>
 		</header>
 
 		<div class="header-slider">
-			<img id="" src="images/header_slider.jpg">
+			<img id="slider-img01" src="images/header_slider.jpg">
 		</div>
+
+		<div class="content">
+			<h3 class="content-title">Features</h3>
+			<p><img src="images/content_separator.png"></p>
+			<div class="features">
+				<div class="feature">
+					<img src="images/feature_one.png">
+					<h5>Branding</h5>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+				</div>
+				<div class="feature">
+					<img src="images/feature_two.png">
+					<h5>Development</h5>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+				</div>
+				<div class="feature">
+					<img src="images/feature_three.png">
+					<h5>Consulting</h5>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="content-works">
+			<h3 class="content-title">Works</h3>
+			<p><img src="images/content_separator.png"></p>
+			<p id="works-heading">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+			<ul class="works-list">
+				<li class="current-work"><a href="#works-list">All</a></li>
+				<li><a href="#works-list">Branding</a></li>
+				<li><a href="#works-list">Web</a></li>
+				<li><a href="#works-list">Logo Design</a></li>
+				<li><a href="#works-list">Photography</a></li>
+			</ul>
+			<img src="images/work_imgs.jpg">
+		</div>
+
+		<div class="meet-team">
+			<h3 class="content-title">Meet our team</h3>
+			<p><img src="images/content_separator.png"></p>
+			<p id="works-heading">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+			<div class="team-members">
+				<ul>
+					<li class="member"><a href="#"><img src="images/team_01.jpg"><p class="member-name">John Filmr Doe</p><p class="member-title">Managing Director</p></a></li>
+					<li class="member"><a href="#"><img src="images/team_02.jpg"><p class="member-name">Chystine Hineu</p><p class="member-title">Lead Designer</p></a></li>
+					<li class="member"><a href="#"><img src="images/team_03.jpg"><p class="member-name">Martin Matrone</p><p class="member-title">Lead Developer</p></a></li>
+					<li class="member"><a href="#"><img src="images/team_04.jpg"><p class="member-name">Steve Flaulkin</p><p class="member-title">Sr. UI Designer</p></a></li>
+				</ul>
+			</div>
+		</div>	
 
 		<footer class="footer"></footer>
 	</div>
 	<script type="text/javascript" src="scripts/main.js"></script>
-	
+
 </body>
 </html>
