--- a/index.html
+++ b/index.html
@@ -89,7 +89,83 @@
 			</div>
 		</div>	
 
-		<footer class="footer"></footer>
+		<div class="facts">
+			<img id="fun-facts-img" src="images/fun_facts.jpg">
+			<div class="facts-content">
+				<h3 class="content-title">Some fun facts</h3>
+				<p><img src="images/content_separator_white.png"></p>
+			</div>
+		</div>
+
+		<div class="discuss">
+			<h3 class="content-title">Let's discuss</h3>
+			<p><img src="images/content_separator.png"></p>
+			<p id="works-heading">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+			
+			<div class="contact-details">
+				<p id="contact-title">Cras at ultrices erat, sed vulputate!</p>
+				<ul >
+					<li id="address">2345 Setwant natrer, 1234,</li>
+					<li id="location">Washington. United States.</li>
+					<li id="phone">(401) 1234 567</li>
+					<li id="email">hello@brandi.com</li>
+					<li id="website">ww.brandi.com</li>
+				</ul>
+			</div>
+
+			<div class="say-hello">
+				<h5>Say hello!</h5>
+				<form>
+					<input id="form-name" type="text" placeholder="Name"></input>
+					<input id="form-email" type="text" placeholder="Email"></input>
+					<input id="form-message" type="text" placeholder="Message"></input>
+					<div id="send"><span><img src="images/envelope.jpg"></span><input id="send-message" type="button" value="Send message"></input></div>
+				</form>
+				
+			</div>
+			<div id="map">
+				<img src="images/map.jpg">
+			</div>
+		</div>
+		<footer class="footer">
+			<div id="footer-separator"></div>
+
+			<div id="footer-content">
+				<div class="footer-column">
+					<a href="#"><img id="footer-logo" src="images/brandi_logo.png"></a>
+					<p>eusmod tempor incididunt ut labore et dolore magna aliqua. 
+					Ut enim ad minim veniam, quis nostrud 
+					exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+					consequat.</p>
+				</div>
+				<div class="footer-column">
+					<h5>Subscribe</h5>
+					<form>
+						<input id="newsletter" type="text"></input>
+					</form>
+					<p>eusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				</div>
+				<div class="footer-column">
+					<h5>Explore</h5>
+					<ul id="links1">
+						<li><a href="#">Envato</a></li>
+						<li><a href="#">Themecurve</a></li>
+						<li><a href="#">Kreativeshowcase</a></li>
+						<li><a href="#">Freebiecurve</a></li>
+					</ul>
+					<ul id="links2">
+						<li><a href="#">Themeforest</a></li>
+						<li><a href="#">Microsoft</a></li>
+						<li><a href="#">Google</a></li>
+						<li><a href="#">Yahoo</a></li>
+					</ul>	
+				</div>
+				<div class="footer-column">
+					<p>Created with <span><img src="images/love.png"></span> by <a id="special-link" href="">themecurve</a>, exclusive for kreativeshowcase.</p>
+					<p id="copyright">&copy; 2016 Iulia Vasiliu. No rights reserves :)</p>
+				</div>
+			</div>
+		</footer>
 	</div>
 	<script type="text/javascript" src="scripts/main.js"></script>
 
